styles/styles.css
/* ... */
.reason {
  justify-content: start;
  padding: 97px 20px 20px 20px;
  gap: 29px;
}

.hotel-booking {
  padding: 91px 0 92px;
  text-align: center;
}

.hotel-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.hotel-booking__title {
  margin: 0 0 29px;

  font-size: 30px;
  font-weight: 700;
  line-height: 36px;
  text-transform: uppercase;
}

.hotel-booking__text {
  margin: 0 0 56px;

  width: 720px;
  font-size: 22px;
  line-height: 26px;
}

.hotel-booking__search-hotels-button {
  font-family: "PT Sans", sans-serif;

  width: 575px;
  padding: 10px 0;

  text-align: center;
  font-size: 20px;
  font-weight: 700;
  line-height: 36px;
  text-transform: uppercase;

  border-radius: 10px;
  border-color: transparent;

  color: #ffffff;
  background-color: #756257;

  cursor: pointer;
}

.hotel-booking__search-hotels-button:hover {
  background-color: #615048;
}

.hotel-booking__search-hotels-button:focus {
  background-color: #615048;
  outline: 3px solid #83b3d3;
}

.hotel-booking__search-hotels-button:active {
  background-color: #615048;
  color: rgba(255, 255, 255, 0.3);
  outline: none;
}

.subscription {
  display: flex;
  flex-direction: column;
  align-items: center;

  padding-bottom: 141px;
}

.subscription--with-background {
  padding: 94px 0;

  text-align: center;
  color: #ffffff;

  background-image: url("../images/content/subscription-background.jpg");
  background-size: 100% auto;
  background-repeat: no-repeat;
  background-color: rgba(131, 179, 211, 0.6);
}

.subscription__heading {
  margin: 0;
  padding: 0 0 29px;

  font-size: 30px;
  font-weight: 700;
  line-height: 36px;
  text-transform: uppercase;
}

.subscription__text {
  margin: 0;
  padding: 0 0 46px;

  font-size: 22px;
  line-height: 26px;
}

.subscription-form {
  display: flex;
}

.subscription-form__email {
  font-family: "PT Sans", sans-serif;

  min-width: 600px;
  min-height: 54px;

  padding: 0 15px 0 22px;

  border-radius: 10px 0 0 10px;
  border-color: transparent;
  background-color: #f2f2f2;
  font-size: 18px;
  line-height: 26px;
}

.subscription-form .error {
  background-color: #ffffff;
  outline: 3px solid #ff5757;
}

.subscription-form__email::placeholder {
  font-family: "PT Sans", sans-serif;
}

.subscription-form__email:hover {
  background-color: #e6e6e6;
}

.subscription-form__email:focus {
  background-color: #e6e6e6;
  outline: 3px solid #83b3d3;
}

.subscription-form__button {
  font-family: "PT Sans", sans-serif;

  padding: 15px 32px 15px 33px;


  border-radius: 0 10px 10px 0;
  border-color: transparent;
  color: #ffffff;
  background-color: #83b3d3;

  font-size: 20px;
  font-weight: 700;
  line-height: 26px;
  text-transform: uppercase;

  cursor: pointer;
}

.subscription-form__button:hover {
  background-color: #68a2ca;
}

.subscription-form__button:focus {
  background-color: #68a2ca;
  outline: 3px solid #756257;
}

.subscription-form__button:active {
  background-color: #68a2ca;
  color: rgba(255, 255, 255, 0.3);
  outline: none;
}

.main-footer {
  padding: 40px 0 40px;
}

.contacts {
  margin: 0 auto;
  display: flex;

  align-items: center;
}

.contacts-social {
  display: flex;
  flex-wrap: wrap;
  gap: 4px;

  list-style-type: none;
  margin: -7px 231px 0 0;
  padding: 0 0 0 61px;
  box-sizing: border-box;
}

.contacts-social-item {
  display: flex;
  align-items: center;
}

.contacts-social__link {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 40px;
  height: 40px;
}

.contacts__phone-to {
  padding: 15px;
}

.cotnacts-social__icons {
  color: #83b3d3;
}

.cotnacts-social__icons:hover {
  color: #68a2ca;
}

.footer-link {
  color: #000000;
  text-decoration: none;
}

.contacts-phone {
  margin-right: 223px;
}

.footer-link {
  font-size: 40px;
  line-height: 40px;
  text-transform: uppercase;
}

.footer-link:hover {
  color: #756257;
}

.footer-link:focus {
  border-radius: 10px;
  outline: 3px solid #83b3d3;
}

.footer-link:active {
  opacity: 0.3;
  outline: none;
}

.contacts__htmlacademy {
  padding: 10px;
}

/* catalog */

.main-catalog {
  font-family: "PT Sans", sans-serif;
  font-size: 18px;
  line-height: normal;

  color: #000000;
  background-color: #ffffff;
}

.catalog {
  min-height: 408px;
  color: #ffffff;
  background-image: url("../images/content/catalog-background.jpg");
  background-size: 100% 100%;
  background-repeat: no-repeat;
  background-color: #5f9ea0;

  margin-bottom: 44px;
  margin-top: -6px;
}

.catalog-wrapper {
  padding: 35px 0 0;
}

.catalog__heading {
  margin: 0;

  font-size: 60px;
  font-weight: 700;
  line-height: normal;
}

.breadcrumbs {
  margin: -6px 0 45px 1px;
  padding: 0;
  list-style-type: none;

  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 16px;
}

.breadcrumbs-item {
  position: relative;
  margin-right: 10px;
}

.breadcrumbs-item::after {
  position: absolute;
  content: "";
  display: block;
  width: 5px;
  height: 8px;
  background-image: url("/images/icons/nav-link.svg");

  top: 7px;
  right: -15px;
}

.breadcrumbs-item:last-child::after {
  content: none;
}

.breadcrumbs__link {
  font-size: 16px;
  line-height: normal;

  display: block;

  color: #ffffff;
  text-decoration: none;
}

.breadcrumbs-item__image {
  color: #ffffff;
}

.breadcrumbs__link:hover {
  opacity: 0.6;
}

.breadcrumbs__link:focus {
  color: #ffffff;
  outline: 3px solid #83b3d3;
}

.breadcrumbs__link:active {
  color: #ffffff;
  opacity: 0.3;
}

.catalog-wrapper {
  width: 1056px;
  margin: 0 auto;
}

.catalog-filter {
  display: flex;
}

.catalog-filter-wrapper {
  display: flex;
  gap: 64px;

  margin-right: 168px;
}

.catalog-filter-group {
  margin: 0;
  padding: 0;
  border: none;
}

.catalog-filter__title {
  margin: 0 0 30px;

  font-size: 20px;
  font-weight: 700;
  line-height: normal;
}

.catalog-filter-list {
  list-style-type: none;
  margin: 0;
  padding: 0;

  display: flex;
  flex-direction: column;
  gap: 13px;
}
/* ... */

